deploy: 2f9048ddc2fbd7ba7938b22861a87be032bd92a8

--- a/oefeningen.html
+++ b/oefeningen.html
@@ -25,6 +25,14 @@
 </header>
 <h1 id="notatie">Notatie</h1>
 <p>Het lettertype <code>Courier</code> wordt gebruikt om iets op te schrijven dat u op het toetsenbord kunt typen. Uitzondering hierop zijn de volgende speciale toetsen: <code>SPATIEBALK</code>, <code>CTRL</code>, <code>ALT</code>, <code>SUPER</code>, <code>MENU</code>, <code>TAB</code>, <code>HOME</code>, <code>END</code>, <code>ESC</code>, <code>DELETE</code>, <code>PageDown</code>, <code>PageUp</code>, <code>PrintScreen</code>, <code>F1</code>, <code>F2</code> … en <code>ENTER</code>, hier dient u betreffende toets in te drukken in plaats van het woord in te typen.</p>
+<h1 id="inleiding">Inleiding</h1>
+<ol type="1">
+<li><p>Op welke familie van besturingssystemen is Linux gebaseerd?</p></li>
+<li><p>Noem twee sleutelfiguren in het onstaan van Linux.</p></li>
+<li><p>Onder welke licensie is de Linux kernel gepubliceerd?</p></li>
+<li><p>Noem drie voordelen van vrije software.</p></li>
+<li><p>Uit welke twee onderdelen bestaat een Linux distributie grofweg gezegd?</p></li>
+</ol>
 <h1 id="rondleiding-gnome">Rondleiding GNOME</h1>
 <ol type="1">
 <li><p>Aanmelden en afmelden</p>
@@ -1338,6 +1346,22 @@
 <li><p>Wachtwoord van beheerder is <code>root</code></p></li>
 <li><p>Sluit Software met <code>ALT+F4</code></p></li>
 </ul></li>
+<li><p>Google Chrome installeren vanuit een .deb bestand</p>
+<ul>
+<li><p>Download .deb bestand</p>
+<ul>
+<li><p>Zoek in Firefox (<code>SUPER+1</code> ) <code>download google chrome</code></p></li>
+<li><p>Klik op bovenste resultaat</p></li>
+<li><p>Kies “Chrome downloaden”</p></li>
+<li><p>Kies de 64-bits .deb indeling voor Debian/Ubuntu</p></li>
+</ul></li>
+<li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Ga naar “Downloads”</p></li>
+<li><p>Klik rechts op “google-chrome_current_amd64.deb”</p></li>
+<li><p>Kies “Software-installatie”</p></li>
+<li><p>Klik op “Installeren”</p></li>
+<li><p>Sluit software met <code>ALT+F4</code></p></li>
+</ul></li>
 <li><p>Discord installeren vanuit een .deb bestand <span id="discord-installeren"></span></p>
 <ul>
 <li><p>Maak op discord.com een account aan als u dat nog niet hebt</p></li>
@@ -1429,6 +1453,16 @@
 <li><p>Open de bestandsbeheerder met <code>SUPER+E</code></p></li>
 <li><p>Ga naar “Downloads”</p></li>
 <li><p>Klik rechts op “discord-0.0.XX.deb”</p></li>
+<li><p>Kies “Software-installatie”</p></li>
+<li><p>Klik op <img src="img/prullenbak.png" height="25" /></p></li>
+<li><p>Wachtwoord van beheerder is <code>root</code></p></li>
+<li><p>Sluit Software met <code>ALT+F4</code></p></li>
+</ul></li>
+<li><p>Verwijder Google Chrome</p>
+<ul>
+<li><p>Open de bestandsbeheerder met <code>SUPER+E</code></p></li>
+<li><p>Ga naar “Downloads”</p></li>
+<li><p>Klik rechts op “google-chrome_current_amd64.deb”</p></li>
 <li><p>Kies “Software-installatie”</p></li>
 <li><p>Klik op <img src="img/prullenbak.png" height="25" /></p></li>
 <li><p>Wachtwoord van beheerder is <code>root</code></p></li>
