--- a/samenvatting.html
+++ b/samenvatting.html
@@ -25,13 +25,130 @@
 </header>
 <h1 id="notatie">Notatie</h1>
 <p>Het lettertype <code>Courier</code> wordt gebruikt om iets op te schrijven dat u op het toetsenbord kunt typen. Uitzondering hierop zijn de volgende speciale toetsen: <code>SPATIEBALK</code>, <code>CTRL</code>, <code>ALT</code>, <code>SUPER</code>, <code>MENU</code>, <code>TAB</code>, <code>HOME</code>, <code>END</code>, <code>ESC</code>, <code>DELETE</code>, <code>PageDown</code>, <code>PageUp</code>, <code>PrintScreen</code>, <code>F1</code>, <code>F2</code> … en <code>ENTER</code>, hier dient u betreffende toets in te drukken in plaats van het woord in te typen.</p>
-<h1 id="wat-is-linux">Wat is Linux</h1>
+<h1 id="inleiding">Inleiding</h1>
 <p><a href="https://www.computerhope.com/jargon/l/linux.htm"><em>Linux</em></a> is een <a href="https://www.computerhope.com/jargon/o/os.htm"><em>besturingssysteem</em></a>. Een besturingssysteem zorgt ervoor dat hardwarecomponenten worden aangestuurd en toepassingen kunnen draaien Voorbeelden van andere besturingssystemen zijn: Windows, MacOS, en Chromium OS</p>
 <h2 id="linux-is-vrij">Linux is vrij</h2>
 <p>Linux is gebaseerd op de filosofie dat software en ideeën vrij gedeeld moeten worden.</p>
 <p>Linux is vrije software onder de <a href="https://www.computerhope.com/jargon/g/gpl.htm"><em>GNU Public License</em></a>.</p>
-<h1 id="waarom-debian">Waarom Debian</h1>
-<p>Daarom</p>
+<h2 id="geschiedenis-van-linux">Geschiedenis van Linux</h2>
+<p>In 1984 begint <a href="https://nl.wikipedia.org/wiki/Richard_M._Stallman"><em>Richard Stallman</em></a> het <a href="https://www.gnu.org/"><em>GNU-project</em></a></p>
+<ul>
+<li><p>GNU betekent “GNU is Not Unix”</p></li>
+<li><p>GNU moet een vrije Unix worden</p></li>
+</ul>
+<h3 id="wat-karakteriseert-het-unix-besturingssysteem">Wat karakteriseert het <a href="https://nl.wikipedia.org/wiki/Unix"><em>Unix</em></a> besturingssysteem?</h3>
+<ul>
+<li><p>Multi tasking</p>
+<ul>
+<li>meerdere processen tegelijk draaien</li>
+</ul></li>
+<li><p>Multi user</p>
+<ul>
+<li>meerdere gebruikers kunnen veilig naast elkaar werken</li>
+</ul></li>
+</ul>
+<h2 id="hoe-vrij">Hoe vrij?</h2>
+<p>Richard Stallman schreef de <a href="https://www.computerhope.com/jargon/g/gpl.htm"><em>GNU Public Licence</em></a> om zijn software vrij te houden:</p>
+<ul>
+<li>Broncode moet meegeleverd worden</li>
+<li>Iedereen mag het draaien en aanpassen</li>
+<li>Je mag een aanpassing alleen onder de GNU Public Licence verspreiden</li>
+</ul>
+<h2 id="oké-stallman-ging-dus-unix-namaken">Oké Stallman ging dus Unix namaken</h2>
+<p>Maar hij miste een kernel</p>
+<p>Linus Torvalds kwam in 1991 met zijn eerste versie van de Linux kernel gelicenseerd onder de GPL</p>
+<p>Zo ontstond de combinatie GNU/Linux</p>
+<h2 id="waar-wordt-linux-gebruikt">Waar wordt Linux gebruikt</h2>
+<ul>
+<li>Android apparaten</li>
+<li>Linux draait op de meerderheid van de internet servers</li>
+<li>Linux draait op supercomputers</li>
+<li>Linux draait op <a href="https://www.fsf.org/blogs/community/gnu-linux-chosen-as-operating-system-of-the-international-space-station"><em>laptops in het ISS</em></a></li>
+<li>Linux draait op de kassa’s van Albert Heijn</li>
+<li>Linux draait op TomToms</li>
+</ul>
+<h2 id="linux-distributie">Linux distributie</h2>
+<ul>
+<li><p>Linux kernel</p></li>
+<li><p>Toepassingen</p>
+<ul>
+<li><p>Web browser <img src="img/firefox-icon.png" width="30" /></p></li>
+<li><p>Office toepassingen <img src="img/writer-icon.png" width="30" /></p></li>
+<li><p>Mail <img src="img/thunderbird-icon.png" width="30" /></p></li>
+<li><p>Videospeler <img src="img/VLC-logo.png" width="30" /></p></li>
+<li><p>Foto bewerken <img src="img/gimp-logo.png" width="30" /></p></li>
+</ul></li>
+</ul>
+<!-- ## Distributies
+
+![width:300px](img/fedora-logo.png) ![width:300px](img/debian-logo.png) ![width:300px](img/ubuntu-logo.png) ![width:300px](img/knoppix-logo.gif) ![width:300px](img/opensuse-logo.png) ![width:300px](img/mint-logo.png) -->
+<h2 id="belang-van-vrije-software">Belang van vrije software</h2>
+<ul>
+<li>Met broncode kun je nagaan wat programmatuur doet</li>
+<li>Programmeurs en gebruikers zijn de baas over de programmatuur</li>
+</ul>
+<h2 id="belang-dat-u-vrije-software-gebruikt">Belang dat u vrije software gebruikt</h2>
+<ul>
+<li>Voorleven aan anderen dat het kan</li>
+<li>Rapporteren van fouten</li>
+</ul>
+<h2 id="voordelen-van-vrije-software">Voordelen van vrije software</h2>
+<ul>
+<li>Kosteloos</li>
+<li>Eenvoudige installatie van toepassingen</li>
+<li>Geen reclame of marketing in het systeem</li>
+<li>Veranderingen aan software die een belangrijk deel van de gebruikers niet aanstaan zal leiden tot een afsplitsing die hen wel behaagd</li>
+</ul>
+<h2 id="redenen-om-debian-te-gebruiken"><a href="https://www.debian.org/intro/why_debian"><em>Redenen om Debian te gebruiken</em></a></h2>
+<ul>
+<li><p>Debian is vrije software</p>
+<ul>
+<li>Gemaakt van vrije bronnen</li>
+<li>Zal altijd 100% vrij zijn</li>
+<li>Vrij voor iedereen om te gebruiken, aangepast en verspreid te worden</li>
+<li>Kosteloos</li>
+</ul></li>
+<li><p>Debian is stabiel en veilig</p>
+<ul>
+<li>Gefundeerde standaardconfiguratie voor alle pakketten</li>
+<li>Geregelde veiligheidsupdates</li>
+</ul></li>
+<li><p>Uitgebreide ondersteuning voor hardware</p>
+<ul>
+<li>Alle hardware die ondersteund wordt door de Linux kernel, wordt ook door Debian ondersteund.</li>
+<li>Indien nodig zijn gepatenteerde stuurprogramma’s beschikbaar</li>
+</ul></li>
+<li><p>Flexibel installatiesysteem</p>
+<ul>
+<li>Live-cd met installatie mogelijkheden</li>
+<li>Debian installer voor meer opties voor ervaren gebruikers</li>
+<li>Preseeded installatie (zonder vragen)</li>
+<li>Geautomatiseerde netwerkinstallatie</li>
+</ul></li>
+<li><p>Debian biedt soepele opwaarderingen</p>
+<ul>
+<li>Eenvoudige pakket opwaardering</li>
+<li>Distributie opwaardering ongeveer elke twee jaar</li>
+</ul></li>
+<li><p>Debian is de basis voor veel andere distributies</p></li>
+<li><p>Het Debian-project is een gemeenschap</p>
+<ul>
+<li>Democratische beleidsstructuur</li>
+<li>Niet door één bedrijf gecontroleerd</li>
+<li>Ontwikkelaars uit 60 landen</li>
+<li>Vertaald naar meer dan 80 talen</li>
+</ul></li>
+<li><p>Debian heeft een enorm aantal softwarepakketten</p>
+<ul>
+<li>59000 pakketten die de .deb indeling gebruiken</li>
+</ul></li>
+<li><p>Debian heeft beleidsrichtlijnen voor ontwikkelaars</p>
+<ul>
+<li>Bevordert de kwaliteit van de software</li>
+<li>Goede integratie van pakketten</li>
+</ul></li>
+<li><p>Lange termijn ondersteuning</p></li>
+</ul>
 <h1 id="rondleiding-gnome">Rondleiding GNOME</h1>
 <h2 id="aanmelden-in-de-displaymanager">Aanmelden in de displaymanager</h2>
 <p>Met account (gebruikersnaam=<code>tux</code>, wachtwoord=<code>tux</code>)</p>
