--- a/inleiding.html
+++ b/inleiding.html
@@ -98,7 +98,7 @@ Linux is gebaseerd op de filosofie dat software en ideeën vrij gedeeld moeten w
 
 <p>Maar hij miste een kernel</p>
 <p>Linus Torvalds kwam in 1991 met zijn eerste versie van de Linux kernel<br />
-gelincenseerd onder de GPL</p>
+gelicenseerd onder de GPL</p>
 <p>Zo ontstond de combinatie GNU/Linux</p>
 </section>
 </foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-theme="gaia" style="" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="11" data-theme="gaia" style="--theme:gaia;">
@@ -203,7 +203,7 @@ gelincenseerd onder de GPL</p>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;img/dwbanner.png&quot;);background-size:95% auto;"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="23" data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
-<h2 id="waarom-speciaal-debian">Waarom speciaal Debian</h2>
+<h2 id="redenen-om-debian-te-gebruiken"><a href="https://www.debian.org/intro/why_debian">Redenen om Debian te gebruiken</a></h2>
 <p>Er zijn 600 Linux <a href="https://distrowatch.com/">distributies</a> die worden onderhouden</p>
 
 <p>Tien redenen voor  Debian</p>
