deploy: 4d5d714b3eabbf49da50acd6fbf14bfb0f283c84

--- a/begrippen.html
+++ b/begrippen.html
@@ -25,7 +25,7 @@
 </header>
 <dl>
 <dt>Actiemenu</dt>
-<dd><p>Menu in de bestandsbeheerder te activeren met <code>F10</code> of de drie puntjes boven elkaar in de adresbalk</p>
+<dd><p>Menu in de bestandsbeheerder te activeren met <code>F10</code> of de drie puntjes boven elkaar in de adresbalk.</p>
 </dd>
 </dl>
 <figure>
@@ -43,6 +43,9 @@
 <img src="img/activiteiten-knop.png" alt="" /><figcaption>Activiteiten knop</figcaption>
 </figure>
 <dl>
+<dt>Adresbalk</dt>
+<dd><p>Invulveld in de bestandsbeheerder <img src="img/bestanden-adresbalk-documenten.png" height="25" /> dat aangeeft in welke map u zich bevindt. In Firefox <img src="img/firefox-adresbalk-debian-org.png" height="25" /> geeft het aan naar welke website u kijkt. U kunt hier ook zelf in typen om naar een map, die u wilt zien, te gaan in de bestandsbeheerder. Of een webadres, wat u wilt bekijken, in Firefox.</p>
+</dd>
 <dt>Applicatie</dt>
 <dd><p>Zie toepassing</p>
 </dd>
@@ -101,10 +104,10 @@
 <p>Zie verder de <a href="https://tldp.org/LDP/Linux-Filesystem-Hierarchy/html/index.html">online-documentatie</a>.</p>
 <dl>
 <dt>Focus</dt>
-<dd><p>Één GUI-element (knop, lijst, invoerveld) of venster kan de focus hebben. Dit betekent dat invoer van het toetsenbord naar dat element of venster wordt gestuurd. U wisselt focus tussen toepassingen met <code>ALT+TAB</code>. Tussen vensters op één scherm met <code>ALT+ESC</code>. En tussen verschillende vensters van dezelfde toepassing met <code>ALT+BACKTICK</code>.</p>
+<dd><p>Eén GUI-element (knop, lijst, invoerveld) of venster kan de focus hebben. Dit betekent dat invoer van het toetsenbord naar dat element of venster wordt gestuurd. U wisselt focus tussen toepassingen met <code>ALT+TAB</code>. Tussen vensters op één scherm met <code>ALT+ESC</code>. En tussen verschillende vensters van dezelfde toepassing met <code>ALT+BACKTICK</code>.</p>
 </dd>
 <dt>GNOME</dt>
-<dd><p>Standaard desktop manager onder debian. Zie <a href="https://help.gnome.org/users/gnome-help/stable/index.html.nl">GNOME docs</a></p>
+<dd><p>Standaard desktop manager in Debian. Zie <a href="https://help.gnome.org/users/gnome-help/stable/index.html.nl">GNOME docs</a>.</p>
 </dd>
 <dt>GUI</dt>
 <dd><p>Graphical user interface.</p>
@@ -128,7 +131,7 @@
 <img src="img/notificatie-venster.png" width="400" alt="" /><figcaption>Notificatie venster</figcaption>
 </figure>
 <dl>
-<dt>Open software</dt>
+<dt>Open source software</dt>
 <dd><p>Software met de broncode erbij. In tegenstelling tot gesloten software kan en mag een programmeur zien wat de software doet.</p>
 </dd>
 <dt>Programma</dt>
@@ -154,7 +157,7 @@
 </figure>
 <dl>
 <dt>Thuismap</dt>
-<dd><p>De gebruikers directorie. Hier worden documenten en afbeeldingen opgeslagen. De gebruiker van wie de thuismap is kan hier zelf mappen aanmaken. Bijvoorbeeld <code>/home/tux</code>. Zie <a href="https://nl.wikipedia.org/wiki/Homedirectory">online-documentatie</a>.</p>
+<dd><p>De gebruikers map. Hier worden documenten en afbeeldingen opgeslagen. De gebruiker van wie de thuismap is kan hier zelf mappen aanmaken. Bijvoorbeeld <code>/home/tux</code>. Zie <a href="https://nl.wikipedia.org/wiki/Homedirectory">online-documentatie</a>.</p>
 </dd>
 <dt>Toepassing</dt>
 <dd><p>Een stuk software dat een bepaalde functionaliteit biedt. Bijvoorbeeld:</p>
