--- a/oefeningen.html
+++ b/oefeningen.html
@@ -232,13 +232,13 @@
 </ol></li>
 <li><p>Sneltoetsen opzoeken. Open de sneltoetsen instellingen zoals in beschreven in de eerste oefening <em>(Hint: Afdeling “Vensters”)</em>.</p>
 <ol type="a">
-<li><p>Wat is de toets voor maximaliseren</p></li>
-<li><p>Wat is de toets voor herstellen</p></li>
+<li><p>Wat is de toets voor maximaliseren?</p></li>
+<li><p>Wat is de toets voor herstellen?</p></li>
 </ol></li>
 <li><p>Sneltoetsen opzoeken. Open de sneltoetsen instellingen zoals in beschreven in de eerste oefening. Gebruik nu het vergrootglas bovenaan het venster om te zoeken.</p>
 <ol type="a">
-<li><p>Wat is de toets voor “Toepassingenmenu openen”</p></li>
-<li><p>Wat is de toets voor “Afmelden”</p></li>
+<li><p>Wat is de toets voor “Toepassingenmenu openen”?</p></li>
+<li><p>Wat is de toets voor “Afmelden”?</p></li>
 </ol></li>
 <li><p>Open en sluit terminal 1</p>
 <ol type="a">
@@ -283,9 +283,9 @@
 </ol></li>
 <li><p>Herhaal dit voor het eerste terminalvenster</p></li>
 </ol></li>
-<li><p>Open en sluit twee firefox vensters</p>
+<li><p>Open en sluit twee Firefox vensters</p>
 <ol type="a">
-<li><p>Druk <code>SUPER+1</code> om firefox te openen</p></li>
+<li><p>Druk <code>SUPER+1</code> om Firefox te openen</p></li>
 <li><p>Maak een nieuw venster aan via het toepassingsmenu</p>
 <ol type="i">
 <li><p><code>SUPER+F10</code></p></li>
@@ -362,7 +362,7 @@
 <li><p>Druk tweemaal <code>ESC</code> om in normale modus te komen</p></li>
 <li><p>Sluit het venster met <code>ALT+F4</code></p></li>
 </ol></li>
-<li><p>Open en sluit twee firefox vensters met de muis</p>
+<li><p>Open en sluit twee Firefox vensters met de muis</p>
 <ol type="a">
 <li><p>Ga activiteiten modus in door op <img src="img/activiteiten-knop.png" height="20" /> te klikken</p></li>
 <li><p>Klik op <img src="img/firefox-icon.png" width="40" /> op de dash</p></li>
@@ -390,11 +390,11 @@
 <li><p>Scroll omlaag en ga via de link naar de presentatie van de cursus.</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
-<li><p>Start Firefox.</p>
+<li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
 <li><p>Ga naar <code>debian.org</code>.</p></li>
 <li><p>Open een extra tabblad met <code>CTRL+T</code>, merk op dat u gelijk het webadres kunt intypen. Ga naar <code>tldp.org</code>.</p></li>
-<li><p>Ga naar het eerste tabblad door <code>CTRL+TAB</code> in te drukken.</p></li>
+<li><p>Ga terug naar het eerste tabblad door <code>CTRL+TAB</code> in te drukken.</p></li>
 <li><p>Sluit <code>debian.org</code>, met <code>CTRL+W</code>.</p></li>
 <li><p>Sluit de browser af door het laatste tabblad te sluiten</p></li>
 </ul></li>
@@ -402,15 +402,15 @@
 <ul>
 <li><p>Ga naar de URL: <code>github.com/slspeek/linux-beginners-cursus</code></p></li>
 <li><p>Scroll naar “Onderdelen”</p></li>
-<li><p>Op de Samenvatting en Oefeningen op een apart tabblad (en blijf op de eerste pagina)</p></li>
+<li><p>Open de Samenvatting en Oefeningen op een apart tabblad (en blijf op de eerste pagina)</p></li>
 <li><p>Gebruik <code>CTRL+TAB</code> om de twee nieuwe pagina’s te bekijken</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Ga naar de URL: <code>slspeek.github.io/linux-beginners-cursus/#14</code></p></li>
+<li><p>Zet <a href="https://slspeek.github.io/linux-beginners-cursus/toepassingen-starten-en-afsluiten.html#4"><code>slspeek.github.io/linux-beginners-cursus/toepassingen-starten-en-afsluiten.html#4</code></a> in de adresbalk</p></li>
 <li><p>Klik rechts in de animatie om het context menu te openen en kies “Afbeelding openen in nieuw tabblad”</p></li>
-<li><p>Bekijk grotere animatie</p></li>
+<li><p>Bekijk de grotere animatie</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
@@ -432,8 +432,7 @@
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Ga met behulp van de bladwijzer naar de “Presentatie” van de cursus</p></li>
-<li><p>Ga naar de tweede pagina</p></li>
+<li><p>Ga met behulp van de bladwijzer naar de “Presentatie” (“Overzicht Linux beginners cursus”) van de cursus</p></li>
 <li><p>Klik met op “Samenvatting”</p></li>
 <li><p>Maak een bladwijzer door <img src="img/firefox-slotje.png" width="30" /> naar de bladwijzerbalk te slepen</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
@@ -442,12 +441,12 @@
 <ul>
 <li><p>Open het context menu (rechtsklikken) van de bladwijzerbalk en kies “Map toevoegen …” en maak een map “cursus” aan</p></li>
 <li><p>Sleep de drie bladwijzers over de cursus naar deze map</p></li>
-<li><p>En order ze zo dat het resultaat er zo uitziet: <img src="img/firefox-bladwijzer-map-cursus-3-items.png" height="100" /></p></li>
+<li><p>En orden ze zodanig dat het resultaat er zo uitziet: <img src="img/firefox-bladwijzer-map-cursus-3-items.png" height="100" /></p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Ga met behulp van de bladwijzer naar de “Presentatie” van de cursus</p></li>
+<li><p>Ga met behulp van de bladwijzer naar de “Presentatie” (“Overzicht Linux beginners cursus”) van de cursus</p></li>
 <li><p>Ga naar de tweede pagina</p></li>
 <li><p>Klik met <code>CTRL</code> ingedrukt op “Oefeningen” en “Begrippenlijst”</p></li>
 <li><p>Breng met behulp van <code>CTRL+TAB</code> de tabbladen 1 voor 1 naar voren en sleep <img src="img/firefox-slotje.png" width="30" /> naar de map “cursus” op de bladwijzerbalk</p></li>
