--- a/samenvatting.html
+++ b/samenvatting.html
@@ -38,14 +38,8 @@
 </ul>
 <h3 id="wat-karakteriseert-het-unix-besturingssysteem">Wat karakteriseert het <a href="https://nl.wikipedia.org/wiki/Unix"><em>Unix</em></a> besturingssysteem?</h3>
 <ul>
-<li><p>Multi tasking</p>
-<ul>
-<li>meerdere processen tegelijk draaien</li>
-</ul></li>
-<li><p>Multi user</p>
-<ul>
-<li>meerdere gebruikers kunnen veilig naast elkaar werken</li>
-</ul></li>
+<li>Multi tasking: meerdere processen tegelijk draaien</li>
+<li>Multi user: meerdere gebruikers kunnen veilig naast elkaar werken</li>
 </ul>
 <h2 id="hoe-vrij">Hoe vrij?</h2>
 <p>Richard Stallman schreef de <a href="https://www.computerhope.com/jargon/g/gpl.htm"><em>GNU Public Licence</em></a> om zijn software vrij te houden:</p>
@@ -54,7 +48,7 @@
 <li>Iedereen mag het draaien en aanpassen</li>
 <li>Je mag een aanpassing alleen onder de GNU Public Licence verspreiden</li>
 </ul>
-<h2 id="oké-stallman-ging-dus-unix-namaken">Oké Stallman ging dus Unix namaken</h2>
+<h2 id="linus-torvalds">Linus Torvalds</h2>
 <p>Maar hij miste een kernel</p>
 <p>Linus Torvalds kwam in 1991 met zijn eerste versie van de Linux kernel gelicenseerd onder de GPL</p>
 <p>Zo ontstond de combinatie GNU/Linux</p>
