--- a/verder-leren.html
+++ b/verder-leren.html
@@ -40,6 +40,13 @@
 <li><p><a href="https://www.youtube.com/watch?v=BVvHZjBVHJw">Writer video</a></p></li>
 </ul></li>
 </ol>
+<h2 id="linux-op-youtube">Linux op Youtube</h2>
+<ol type="1">
+<li><p><a href="https://www.youtube.com/@TheLinuxEXP">The Linux Experiment</a></p></li>
+<li><p><a href="https://www.youtube.com/@LearnLinuxTV">Learn Linux TV</a></p></li>
+<li><p><a href="https://www.youtube.com/@VeronicaExplains">Veronica Explains</a></p></li>
+<li><p><a href="https://www.youtube.com/@LinuxTex">Linux Tex</a></p></li>
+</ol>
 <h2 id="linux-cursussen">Linux cursussen</h2>
 <ol type="1">
 <li><p><a href="https://www.freecodecamp.org/news/introduction-to-linux/">Introduction to Linux</a></p></li>
