deploy: d05298301384ef613fa6fd1e85a4789cf0f010ce

--- a/oefeningen.html
+++ b/oefeningen.html
@@ -486,7 +486,7 @@
 </ol>
 <h2 id="bestanden">Bestanden</h2>
 <ol type="1">
-<li><p>Waar staat de thuismap van tux?</p></li>
+<li><p>Waar staat de thuismap van gebruiker tux?</p></li>
 <li><p>Wat is het map scheidingsteken op Linux?</p></li>
 <li><p>Onder welke map is een aangekoppelde USB-stick terug te vinden?</p></li>
 <li><p>Waarvoor hebt u een bestandsbeheerder nodig (noem vier redenen)?</p></li>
@@ -616,8 +616,8 @@
 <li><p>Bladwijzer van een map maken van één uw projecten</p>
 <ul>
 <li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
-<li><p>Maak in <code>Documenten</code> een map <code>werkstuk-protohistorie</code> aan.</p></li>
-<li><p>Sleep deze juist aangemaakte map naar het linkerpaneel boven het “Nieuwe bladwijzer” <img src="img/bestanden-hint-nieuwe-bladwijzer.png" height="150" /></p></li>
+<li><p>Ga <code>Documenten</code> in.</p></li>
+<li><p>Sleep <code>werkstuk-protohistorie</code> naar het linkerpaneel boven het “Nieuwe bladwijzer” <img src="img/bestanden-hint-nieuwe-bladwijzer.png" height="150" /></p></li>
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Twee bladwijzers maken</p>
@@ -649,9 +649,10 @@
 </ul></li>
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
 </ul></li>
-<li><p>Hoe groot in pixels is het plaatje <code>blaassilene.jpg</code> (anjerfamilie)?</p>
+<li><p>Hoe groot in pixels is het plaatje <code>blaassilene.jpg</code> (<code>Afbeeldingen/bloemen/anjerfamilie</code>)?</p>
 <ul>
-<li>Gebruik “Eigenschappen” van het bestand</li>
+<li><p>Gebruik “Eigenschappen” van het bestand</p></li>
+<li><p>Klik onderaan de “Eigenschappen” popup op “Afbeeldingseigenschappen”</p></li>
 </ul></li>
 <li><p>Werkstukje maken over protohistorie.</p>
 <ul>
@@ -662,7 +663,7 @@
 <li><p>Print de pagina <a href="https://nl.wikipedia.org/wiki/Protohistorie"><code>https://nl.wikipedia.org/wiki/Protohistorie</code></a> naar pdf en sla deze op in de map <code>werkstuk-protohistorie</code> gebruikmakend van de bladwijzer.</p></li>
 <li><p>Sluit Firefox</p></li>
 <li><p>Open opnieuw bestandsbeheerder met <code>SUPER+E</code></p></li>
-<li><p>Zoek met <code>CTRL+F</code> naar het woord <code>schrift</code>, het document <code>Protohistorie - Wikipedia.pdf</code> uit de map <code>werkstuk-protohistorie</code> moet zich onder de zoekresultaten moeten bevinden.</p></li>
+<li><p>Zoek met <code>CTRL+F</code> naar het woord <code>periode</code>, het document <code>Protohistorie - Wikipedia.pdf</code> uit de map <code>werkstuk-protohistorie</code> moet zich onder de zoekresultaten moeten bevinden.</p></li>
 </ul></li>
 <li><p>Maak een archief <code>bloemen.zip</code> in de map <code>Afbeeldingen</code> van de map <code>bloemen</code>.</p>
 <ul>
@@ -688,7 +689,7 @@
 <li><p>Navigeer naar <code>Afbeeldingen</code> en kopieer <code>bloemen.zip</code> door er rechts op te klikken en “Kopieren” te kiezen</p></li>
 <li><p>Navigeer naar de eerder gemaakte <code>plaatjes</code> map. De druk <code>CTRL+V</code> om een kopie van het <code>bloemen.zip</code> archief hier te plaatsen.</p></li>
 <li><p>Klik rechts op <code>bloemen.zip</code> en kies “Uitpakken”. Er is nu een map <code>bloemen</code> in <code>plaatjes</code> gemaakt. Overtuig u ervan dat dit precies de families bevat die u gemaakt had.</p></li>
-<li><p>Gooi <code>bloemen.zip</code> en map <code>bloemen</code> uit <code>plaatjes</code> in de prullenbak. Door rechts te klikken en “In de prullenbak gooien” te kiezen.</p></li>
+<li><p>Gooi <code>bloemen.zip</code> en map <code>bloemen</code> uit <code>plaatjes</code> in de prullenbak. Door er rechts op te klikken en “In de prullenbak gooien” te kiezen.</p></li>
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Archief uitpakken naar</p>
