deploy: 2ed0565ab92cbfbf77664b3f1bec538a89267553

--- a/verder-leren.html
+++ b/verder-leren.html
@@ -25,12 +25,6 @@
 </header>
 <h1 id="verder-leren">Verder leren</h1>
 <p>Alle bronnen die u hier vindt zijn kosteloos.</p>
-<h2 id="debian">Debian</h2>
-<ol type="1">
-<li><p><a href="https://www.debian.org/">Debian website</a></p></li>
-<li><p>Voor specifieke taken: <a href="https://wiki.debian.org/FrontPage">Debian wiki</a></p></li>
-<li><p><a href="https://www.youtube.com/c/DebConfVideos">Debian conferenties</a></p></li>
-</ol>
 <h2 id="desktop">Desktop</h2>
 <ol type="1">
 <li><p><a href="https://help.gnome.org/users/gnome-help/stable/index.html.nl">GNOME online help</a></p></li>
@@ -40,6 +34,8 @@
 <li><p><a href="https://www.youtube.com/watch?v=BVvHZjBVHJw">Writer video</a></p></li>
 </ul></li>
 </ol>
+<h2 id="het-ontbrekende-semester">Het ontbrekende semester</h2>
+<p><a href="https://missing.csail.mit.edu/">The Missing Semester of Your CS Education</a> is een cursus voor aankomend studenten informatica. De lessen hebben een video met uitleg, een uitgeschreven tekst van de video en oefeningen. Hierbij leert u de shell en een aantal zeer nuttige tools gebruiken. Naar mijn mening is dit het beste materiaal dat er beschikbaar is voor mensen die dieper in Linux willen duiken. De kwaliteit is hoog, maar het tempo ook. Neem er de tijd voor en sla geen oefeningen over.</p>
 <h2 id="linux-op-youtube">Linux op Youtube</h2>
 <ol type="1">
 <li><p><a href="https://www.youtube.com/@TheLinuxEXP">The Linux Experiment</a></p></li>
@@ -57,6 +53,12 @@
 <ol type="1">
 <li><p><a href="https://learning.lpi.org/en/">Leren op LPI</a></p></li>
 <li><p><a href="https://developer.ibm.com/tutorials/l-lpic1-map/">LPIC1 op IBM</a></p></li>
+</ol>
+<h2 id="debian">Debian</h2>
+<ol type="1">
+<li><p><a href="https://www.debian.org/">Debian website</a></p></li>
+<li><p>Voor specifieke taken: <a href="https://wiki.debian.org/FrontPage">Debian wiki</a></p></li>
+<li><p><a href="https://www.youtube.com/c/DebConfVideos">Debian conferenties</a></p></li>
 </ol>
 </body>
 </html>
